prod-redy-configs/order-dep.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-deploy
  labels:
    app: order
spec:
  replicas: 1
  selector:
    matchLabels:
      app: order
  template:
    metadata:
      labels:
        app: order
    spec:
      containers:
        - name: order-service
          image: docker.io/tinsae/order-service:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: order
  labels:
    app: order
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 3000
      protocol: TCP
  selector:
    app: order
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: order-virtualservice
spec:
  hosts:
    - "*"
  gateways:
    - gateway
  http:
    - match:
        - uri:
            prefix: /api/v1/orders
      route:
        - destination:
            host: order
            port:
              number: 80
