prod-redy-configs/restaurant-dep.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: restaurant
  labels:
    app: restaurant
spec:
  replicas: 1
  selector:
    matchLabels:
      app: restaurant
  template:
    metadata:
      labels:
        app: restaurant
    spec:
      containers:
        - name: restaurant
          image: docker.io/tinsae/restaurant-api:1.0.1
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: restaurant
  labels:
    app: restaurant
spec:
  type: ClusterIP
  ports:
    - port: 3000
      protocol: TCP
  selector:
    app: restaurant
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: restaurant-virtualservice
spec:
  hosts:
    - "*"
  gateways:
    - gateway
  http:
    - match:
        - uri:
            prefix: /api/restaurants
      route:
        - destination:
            host: restaurant
            port:
              number: 3000
